# overflow

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: README.md  __init__.py  advanced_examples.py  basic_example.py  benchmark_strategies.py  performance_comparison.py  test_60gb_model.py  test_all_scenarios.py
src/overflow/: 1.py  2.py  __init__.py  cli.py  config.py  device_manager.py  enums.py  module.py  partitioner.py  profiler.py  swap_manager.py
test/: rename_test.py
tests/: README.md  TEST_QUICK_REFERENCE.md  __init__.py  conftest.py  pytest.ini  run_tests.py  run_tests_isolated.py  test_all_scenarios.py  test_block_swap_manager.py  test_device_manager.py  test_dynamic_memory_module.py  test_hardware_scenarios.py  test_integration.py  test_memory_config.py  test_memory_profiler.py  test_model_partitioner.py  test_overflow.py  test_performance_benchmarks.py
tests/benchmark/: __init__.py  test_performance.py
